<resources>
    <string name="app_name">AO.space</string>
    <string name="left_quotation_mark">\"</string>
    <string name="right_quotation_mark">\"</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="full_stop">.</string>
    <string name="colon">:</string>
    <string name="caesura_mark">,&#160;</string>
    <string name="left_bracket_left_enter">\n(</string>
    <string name="none">None</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="chinese_ordinal_one_abbr">1st</string>
    <string name="chinese_ordinal_two_abbr">2nd</string>
    <string name="common_language_space">&#160;</string>
    <string name="common_language_unit_zhang"></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mode">Mode</string>
    <string name="shutdown">Shutdown</string>
    <string name="continue_to_serve_you">Continue to Serve You</string>
    <string name="app_exit_hint">Press again to exit AO.space.</string>
    <string name="service_exception_hint">Service exception, please try again later.</string>
    <string name="notice_hint">Notice</string>
    <string name="twenty_four_hours">24 hours</string>
    <string name="device_server_name">AO.space Server</string>
    <string name="generation_part_1">\n(</string>
    <string name="generation_part_2">&#160;Generation)</string>
    <string name="online_version">Cloud</string>
    <string name="pc_version">Self-hosting</string>
    <string name="open_source_version">AO.space Server (Open-source)</string>
    <string name="introduce">Introduction</string>
    <string name="bind_incompatible_notice_pc">The server and client versions are consistent in order to bind successfully, please download and use the AO.space (community edition) to try again.</string>
    <string name="download_address">Download address:</string>
    <string name="cannot_bind">Can not bind</string>
    <string name="space_exclusive_logo">Space Specific Logo</string>
    <string name="country_and_language">Country and Language</string>
    <string name="string_continue">Continue</string>
    <string name="common_close">Close</string>
    <string name="ao_space_welcome">Welcome to the AO.space\n(Open-source)</string>
    <string name="ao_space_start_hint">Swipe left to start</string>
    <string name="respective_country">Country</string>
    <string name="choose_language">Select Language</string>
    <string name="home_file">Files</string>
    <string name="home_mine">Mine</string>
    <string name="all_file">All Files</string>
    <string name="copy">Copy</string>
    <string name="cut">Move</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="choose">Select</string>
    <string name="add_to">Add to</string>
    <string name="new_folder">New Folder</string>
    <string name="new_folder_short">Folder</string>
    <string name="upload_file_short">Documents</string>
    <string name="upload_photo_short">Photos</string>
    <string name="upload_video_short">Videos</string>
    <string name="upload_scan">Scan</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="cancel">Cancel</string>
    <string name="distribution_network">Device Distribution Network</string>
    <string name="empty_wlan_title">No WLAN Available</string>
    <string name="empty_wlan_content">If you want to change the wireless network, you need to manually restart the space device. Are you sure to restart it?</string>
    <string name="permission_deny_setting_hint">Please go to set open permission!</string>
    <string name="permission_deny_open_failed">Permission denied, opening failed!</string>
    <string name="bluetooth_disable_hint">Bluetooth is disabled, please go to settings to turn it on!</string>
    <string name="start_discovery">Start Searching</string>
    <string name="connect_device_failed">Connect failed!</string>
    <string name="connect_device_success">Connect success!</string>
    <string name="device_already_connected">Device already connected!</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_ok">Confirm</string>
    <string name="upload">Upload</string>
    <string name="copy_to">Copy to&#160;</string>
    <string name="cut_to">Move to&#160;</string>
    <string name="upload_to">Upload to&#160;</string>
    <string name="choose_file_part_1"></string>
    <string name="choose_file_part_2_singular">&#160;Selected</string>
    <string name="choose_file_part_2_plural">&#160;Selected</string>
    <string name="choose_picture_part_2_singular">&#160;Selected</string>
    <string name="choose_picture_part_2_plural">&#160;Selected</string>
    <string name="choose_video_part_2_singular">&#160;Selected</string>
    <string name="choose_video_part_2_plural">&#160;Selected</string>
    <string name="search_all_files">Search All Files</string>
    <string name="search_image">Search Image</string>
    <string name="search_video">Search Video</string>
    <string name="search_document">Search Document</string>
    <string name="search_other">Search Other</string>
    <string name="search_image_and_vide">File name, album name, date</string>
    <string name="all">All</string>
    <string name="image">Photos</string>
    <string name="video">Videos</string>
    <string name="document_short">Docs</string>
    <string name="other">Other</string>
    <string name="device">Device</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="online">On-line</string>
    <string name="offline">Off-line</string>
    <string name="using">Using</string>
    <string name="expired">Expired</string>
    <string name="click_to_use">Click to Use</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_copy">Copy</string>
    <string name="offline_hint">The device is offline. Please connect the device to the network cable and try again.</string>
    <string name="online_request_login_hint">Authorized use of the device.</string>
    <string name="login_more_space">Login to More Space</string>
    <string name="confirm_bind">Confirm Binding</string>
    <string name="binding">Binding</string>
    <string name="bind_device">Binding Device</string>
    <string name="login_device">Login Device</string>
    <string name="bind_device_hint">Please ensure that the device is powered on and connected to the route with a network cable.</string>
    <string name="no_device_found">No Devices Found</string>
    <string name="no_device_found_hint_part_1">The desired device is not found. Please ensure that the power supply and network cable are connected. Click \"</string>
    <string name="no_device_found_hint_part_2">\" after confirmation.</string>
    <string name="scan_ready">Scan</string>
    <string name="rescan">Rescan</string>
    <string name="bind_device_failed">Binding Failed</string>
    <string name="bind_device_failed_hint_400">Please try again later!</string>
    <string name="bind_device_failed_hint_409">This device has been bound by the administrator, please do not repeat the operation.</string>
    <string name="bind_device_failed_hint_461">Incorrect security password, please try again after 1 minute.</string>
    <string name="return_back">Return</string>
    <string name="bind_device_success">Binding Succeed</string>
    <string name="login_authorization">Login Authorization</string>
    <string name="space_initialization">Space Initialization</string>
    <string name="initialize_space">Initializing Space</string>
    <string name="finishing_initialize">Finishing Initialized</string>
    <string name="guide_start">Start Using</string>
    <string name="select_album">Select Album</string>
    <string name="show_only_not_upload">Only Show not Uploaded</string>
    <string name="upload_size_limit">limit 300M per file</string>
    <string name="upload_location">Upload Location:&#160;</string>
    <string name="select_count_limit">Only 100 files can be selected at a time</string>
    <string name="upload_description">Your files will be transferred from the mobile phone to the private
        network disk device in encrypted form, and will not exist in any ECs. Please rest assured. The file upload path is shown below and can be changed manually.</string>
    <string name="join_beta">Try Now</string>
    <string name="join_beta_description_part_1">If you do not have an AO.space device, you can experience it online or self-hosted, and click "</string>
    <string name="join_beta_description_part_2">" to request an activation code.</string>
    <string name="save">Save</string>
    <string name="save_to_local">Save Local</string>
    <string name="more">More</string>
    <string name="detail">Details</string>
    <string name="file_name">File Name</string>
    <string name="modify_date">Modify Time</string>
    <string name="file_size">File Size</string>
    <string name="file_path">File Path</string>
    <string name="sort_order">Sort Order</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_time">Sort by Modified Time</string>
    <string name="system_update">System Update</string>
    <string name="input_platform_url_hint">Please input the space platform address</string>
    <string name="address">Address</string>
    <string name="address_input_notice">Note: Please fill in your space platform address, installation and deployment guide: https://ao.space/open/documentation/104002, if you use the official channel, please enter:https://ao.space</string>
    <string name="binding_close_internet_channel_title">Are you sure to close the Internet channel?</string>
    <string name="binding_close_internet_channel_content">Closing the internet channel will make it impossible to access the external network anytime and anywhere.</string>
    <string name="binding_internet_channel_tip_1">The Internet channel is provided by the official space platform of AO.space. Based on end-to-end encryption technology, the platform cannot parse personal data.</string>
    <string name="binding_internet_channel_tip_2">AO.space supports users to deploy private space platform, you can switch to the personal private space platform on demand.</string>
    <string name="input_security_password_hint_short">6-digit digital</string>
    <string name="old_password">Original Passcode</string>
    <string name="new_security_password">New Passcode</string>
    <string name="repeat_new_security_password">Repeat New Passcode</string>
    <string name="repeat_new_security_password_hint">Please confirm again</string>
    <string name="modify_security_password_hint">The security password is 6 digits and can only be set and modified by the administrator. Please keep this password carefully.</string>
    <string name="forget_password">Forget</string>
    <string name="grantee_security_request_title">AO.space needs to verify your administrator identity.</string>
    <string name="grantee_security_request_content">Please confirm on the bound phone.</string>
    <string name="granter_mobile_phone_inaccessible">Binding phone is not available.</string>
    <string name="install_now">Install now</string>
    <string name="later">Later</string>
    <string name="detailed_information">Detailed info</string>
    <string name="system_upgrade_dialog_content">“%$” can be used for your device. Do you want to install it now?</string>
</resources>