<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 Institute of Software, Chinese Academy of Sciences (ISCAS)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_ffffffff_rectangle_top_10">

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/s_17_ff337aff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_14"
        android:padding="@dimen/dp_5"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/s_17_ff333333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_19"
        android:text="@string/address"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_confirm"
        style="@style/s_17_ff337aff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_14"
        android:padding="@dimen/dp_5"
        android:text="@string/confirm_ok" />

    <xyz.eulix.space.view.NormalEditInputView
        android:id="@+id/input_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_25"
        app:inputHint="@string/input_platform_url_hint"
        app:isPwdStyle="false" />

    <TextView
        style="@style/s_12_ff85899c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_view"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_9"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginBottom="@dimen/dp_28"
        android:text="@string/address_input_notice" />

</RelativeLayout>