<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Institute of Software, Chinese Academy of Sciences (ISCAS)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_259"
    android:layout_height="wrap_content"
    android:background="@drawable/background_ffffffff_rectangle_10"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/dp_93"
        android:layout_height="@dimen/dp_70"
        android:layout_marginTop="@dimen/dp_19"
        android:src="@drawable/icon_system_upgrade_dialog" />

    <TextView
        android:id="@+id/dialog_title"
        style="@style/s_17_ff333333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_14"
        android:text="@string/system_update"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_34"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginEnd="@dimen/dp_34"
        android:text="@string/system_upgrade_dialog_content"
        android:textColor="@color/black_ff333333"
        android:textSize="@dimen/dp_13"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_install_now"
        style="@style/s_15_ff337aff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:padding="@dimen/dp_18"
        android:text="@string/install_now"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/white_fff7f7f9" />

    <TextView
        android:id="@+id/tv_later"
        style="@style/s_15_ff337aff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_18"
        android:text="@string/later"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/white_fff7f7f9" />

    <TextView
        android:id="@+id/tv_detail_info"
        style="@style/s_15_ff337aff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_18"
        android:text="@string/detailed_information"
        android:textStyle="bold" />
</LinearLayout>