<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_ffffffff_rectangle_top_10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginStart="@dimen/dp_29"
        android:layout_marginEnd="@dimen/dp_29"
        android:gravity="center_horizontal"
        android:text="@string/binding_close_internet_channel_title"
        android:textColor="@color/black_ff333333"
        android:textSize="@dimen/dp_17"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_27"
        android:layout_marginStart="@dimen/dp_29"
        android:layout_marginEnd="@dimen/dp_29"
        android:text="@string/binding_close_internet_channel_content"
        android:textColor="@color/black_ff333333"
        android:textSize="@dimen/dp_13"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_29"
        android:layout_marginEnd="@dimen/dp_29">

        <View
            android:layout_width="@dimen/dp_6"
            android:layout_height="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_6"
            android:background="@drawable/background_ff337aff_oval" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/dp_6"
            android:text="@string/binding_internet_channel_tip_1"
            android:textColor="@color/gray_ff85899c"
            android:textSize="@dimen/dp_13"
            android:textStyle="normal"
            android:lineHeight="@dimen/dp_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_29"
        android:layout_marginEnd="@dimen/dp_29">

        <View
            android:layout_width="@dimen/dp_6"
            android:layout_height="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_6"
            android:background="@drawable/background_ff337aff_oval" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/dp_6"
            android:text="@string/binding_internet_channel_tip_2"
            android:textColor="@color/gray_ff85899c"
            android:textSize="@dimen/dp_13"
            android:textStyle="normal"
            android:lineHeight="@dimen/dp_18" />
    </LinearLayout>

    <Button
        android:id="@+id/dialog_confirm"
        android:layout_width="@dimen/dp_192"
        android:layout_height="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_38"
        android:background="@drawable/background_ff337aff_ff16b9ff_rectangle_10"
        android:layout_gravity="center_horizontal"
        android:text="@string/common_close"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dp_15"
        android:textStyle="normal"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="@dimen/dp_192"
        android:layout_height="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_9"
        android:layout_marginBottom="@dimen/dp_18"
        android:background="@android:color/transparent"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/gray_ff85899c"
        android:textSize="@dimen/dp_15"
        android:textStyle="normal"
        style="?android:attr/borderlessButtonStyle" />
</LinearLayout>