<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Institute of Software, Chinese Academy of Sciences (ISCAS)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="@dimen/dp_307"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/background_ffffffff_rectangle_10">

    <ImageView
        android:layout_width="@dimen/dp_96"
        android:layout_height="@dimen/dp_96"
        android:layout_marginTop="@dimen/dp_58"
        android:src="@drawable/administrator_granter_security_2x"
        android:scaleType="fitCenter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_29"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:text="@string/grantee_security_request_title"
        android:textColor="@color/black_ff333333"
        android:textSize="@dimen/dp_15"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:text="@string/grantee_security_request_content"
        android:textColor="@color/black_ff333333"
        android:textSize="@dimen/dp_17"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/granter_mobile_phone_inaccessible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:text="@string/granter_mobile_phone_inaccessible"
        android:textColor="@color/blue_ff337aff"
        android:textSize="@dimen/dp_13"
        android:textStyle="normal" />

    <Button
        android:id="@+id/grantee_cancel_request"
        android:layout_width="@dimen/dp_192"
        android:layout_height="@dimen/dp_42"
        android:background="@drawable/background_fff5f6fa_rectangle_10"
        android:layout_marginTop="@dimen/dp_48"
        android:layout_marginBottom="@dimen/dp_59"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black_ff333333"
        android:textSize="@dimen/dp_15"
        android:textStyle="normal"
        style="?android:attr/borderlessButtonStyle" />
</LinearLayout>