<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Institute of Software, Chinese Academy of Sciences (ISCAS)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include layout="@layout/eulix_space_title_extension" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_8"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:id="@+id/old_password_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_57"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/old_password"
            android:textColor="@color/black_ff333333"
            android:textSize="@dimen/dp_15"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/old_password_edit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/input_security_password_hint_short"
            android:textColorHint="@color/white_ffdfe0e5"
            android:inputType="numberPassword"
            android:singleLine="true"
            android:gravity="start|center_vertical"
            android:textColor="@color/black_ff333333"
            android:textSize="@dimen/dp_15"
            android:textStyle="normal" />
    </LinearLayout>

    <View
        android:id="@+id/old_password_split"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:background="@color/white_fff7f7f9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_57"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_security_password"
            android:textColor="@color/black_ff333333"
            android:textSize="@dimen/dp_15"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/new_password_edit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/input_security_password_hint_short"
            android:textColorHint="@color/white_ffdfe0e5"
            android:inputType="numberPassword"
            android:singleLine="true"
            android:gravity="start|center_vertical"
            android:textColor="@color/black_ff333333"
            android:textSize="@dimen/dp_15"
            android:textStyle="normal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:background="@color/white_fff7f7f9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_57"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_new_security_password"
            android:textColor="@color/black_ff333333"
            android:textSize="@dimen/dp_15"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/repeat_password_edit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/repeat_new_security_password_hint"
            android:textColorHint="@color/white_ffdfe0e5"
            android:inputType="numberPassword"
            android:singleLine="true"
            android:gravity="start|center_vertical"
            android:textColor="@color/black_ff333333"
            android:textSize="@dimen/dp_15"
            android:textStyle="normal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:background="@color/white_fff7f7f9" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25"
        android:text="@string/modify_security_password_hint"
        android:textColor="@color/gray_ff85899c"
        android:textSize="@dimen/dp_10"
        android:textStyle="normal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_19"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_25">

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/forget_password"
            android:textColor="@color/blue_ff337aff"
            android:textSize="@dimen/dp_13"
            android:textStyle="normal"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>